# tsuchibot_dev

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package.json  pyproject.toml  run_exploration.command
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: explore.yml  migrate.yml  test.yml
backend/: __init__.py
backend/app/: __init__.py  main.py
backend/migrations/: 0001_foundation.sql  0002_seed_sources.sql  0003_catalog.sql  0004_ai_analysis.sql  0005_mercari_research.sql  0006_visual_search_evidence.sql  0007_recommendations.sql  0008_web_review.sql  0009_ec_exploration.sql
backend/tests/: conftest.py  test_auth_api.py  test_browser_research_parser.py  test_catalog_collection.py  test_catalog_domain.py  test_catalog_ingestion.py  test_database_url.py  test_duplicate_detection.py  test_ec_api.py  test_ec_application.py  test_ec_domain.py  test_gemini_adapter.py  test_github_dispatcher.py  test_jimoty_adapter.py  test_mercari_manual_adapter.py  test_migration_runner.py  test_migrations.py  test_model_identification.py  test_product_analysis.py  test_research_batch.py  (+6 more)
docs/: 00_Project.md  01_Principles.md  02_Requirements.md  03_Architecture.md  04_Domain.md  05_Database.md  06_AI.md  07_Scraping.md  08_API.md  09_Frontend.md  10_Roadmap.md  11_Test.md  12_Codex.md  13_Implementation_Status.md
frontend/: package.json  pnpm-lock.yaml
scripts/: configure_github_database.py  dev-backend.sh  explore-ec.sh  explore.sh  frontend.sh  migrate.py  recommend.sh  research-mercari-browser.sh  research-mercari.sh
worker/: __init__.py  cli.py
(+95 files in other folders)
