[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "tsuchibot"
version = "0.1.0"
description = "Explainable sourcing-decision and profit-opportunity discovery agent"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "beautifulsoup4>=4.13,<5",
  "fastapi>=0.116,<0.117",
  "httpx>=0.28,<0.29",
  "playwright>=1.61,<2",
  "psycopg[binary,pool]>=3.2,<4",
  "pydantic-settings>=2.10,<3",
  "structlog>=25.4,<26",
  "uvicorn[standard]>=0.35,<0.36",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.17,<2",
  "pglast>=8.2,<9",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<0.13",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/app", "worker"]

[tool.pytest.ini_options]
testpaths = ["backend/tests", "worker/tests"]
asyncio_mode = "auto"
addopts = "--strict-markers --strict-config -q"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend", "worker"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["backend.app", "worker"]
plugins = ["pydantic.mypy"]
